# landnet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
examples/: split_raster.py  terrain_analysis.py
landnet/: __init__.py  _typing.py  cnn.py  config.py  dataset.py  enums.py  features.py  logger.py  plots.py  raster.py  stats.py  terrain_analysis.py  training.py  typing.py  utils.py
logging/: config.json
models/: alexnet_test_labels.csv  alexnet_test_results.csv  all_variables.csv  all_variables_10_epochs.csv  area_alexnet.csv  area_convnext.csv  area_resnet50.csv  cbl_alexnet.csv  cbl_convnext.csv  cbl_resnet50.csv  ccros_alexnet.csv  ccros_convnext.csv  ccros_resnet50.csv  cdl_alexnet.csv  cdl_convnext.csv  cdl_resnet50.csv  cdo_alexnet.csv  cdo_convnext.csv  cdo_resnet50.csv  cgene_alexnet.csv  cgene_convnext.csv  cgene_resnet50.csv  clo_alexnet.csv  clo_convnext.csv  clo_resnet50.csv  clong_alexnet.csv  clong_convnext.csv  clong_resnet50.csv  clu_alexnet.csv  clu_convnext.csv  clu_resnet50.csv  cmaxi_alexnet.csv  cmaxi_convnext.csv  cmaxi_resnet50.csv  cmini_alexnet.csv  cmini_convnext.csv  cmini_resnet50.csv  conv_alexnet.csv  conv_convnext.csv  conv_resnet50.csv  (+87 more)
notebooks/: feature_importance.ipynb  gradcams.ipynb  gradcams_perturbation.ipynb  graphs_for_presentation.ipynb  infer_segmentation.ipynb  model_evaluation_tables.ipynb  plot_tiles.ipynb  scores.ipynb  train_segmentation.ipynb
scripts/: alexnet.py  check_f1.py  check_scores.py  cnn.py  cnn_tune.py  cnn_tune_threshold.py  compute_grids.py  correlation_matrix.py  create_confussion_matrix_map.py  create_geojson.py  download_laki_dem.py  eval_legacy_models.py  export_overlap_tiles_example.py  feature_maps.py  lidar.py  (+11 more)
(+1339 files in other folders)
