[project]
name = "landnet"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Alex-Andrei Cuvuliuc", email = "cuvuliucalexandrei@gmail.com"},
]
dependencies = ['PySAGA-cmd']

[tool.setuptools.packages.find]
where = ["."]
include = ["landnet"]
exclude = []

[tool.mypy]
ignore_missing_imports = true
